tests/compile-fail/incomplete_grammar.rs

peg::parser!();

peg::parser!(
    grammar parser() for str
);

fn main() {}